<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_login"
    android:layout_margin="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unsaved_changes"
        android:gravity="center"
        android:fontFamily="@font/fjalla_one_regular"
        android:textSize="24.5sp"
        android:textColor="@color/black"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="@string/warning_wrong_password_try_again"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_button_dialog"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:id="@+id/btnOK"
            android:textSize="16sp"
            android:fontFamily="@font/be_vietnam_medium"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_button_dialog"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:id="@+id/btnCancel"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/be_vietnam_medium"
            />

    </LinearLayout>








</LinearLayout>