<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_login"
    android:layout_margin="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/varification_failed"
        android:gravity="center"
        android:fontFamily="@font/fjalla_one_regular"
        android:textSize="64px"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/black"
        android:layout_marginTop="11px"
        android:text="@string/your_vertification_code_is_incorrect"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="100px"
        android:background="@drawable/button_dialog_custom"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:id="@+id/btnOK"
        android:textSize="45px"
        android:layout_marginTop="50px"
        android:fontFamily="@font/be_vietnam_medium"
        />







</LinearLayout>