<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_login"
    android:layout_margin="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_information"
        android:gravity="center"
        android:fontFamily="@font/fjalla_one_regular"
        android:textSize="24.5sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/be_vietnam_light"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="@string/your_personal_information_n_has_been_saved"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/custom_button_dialog"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:id="@+id/btnOK"
        android:paddingBottom="4dp"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/be_vietnam_medium"
        />







</LinearLayout>