<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_yellow"
    tools:context=".AllNotificationScreen"
    android:backgroundTint="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAllCaps="true"
        android:fontFamily="@font/fjalla_one_regular"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="28dp"
        android:text="@string/notifications"
        android:id="@+id/txtNotification"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_arror_left"
        android:layout_margin="16dp"
        android:id="@+id/imvBackNotifications"

        />
    <androidx.appcompat.widget.SearchView
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toLeftOf="@id/lnFilterNotification"
        app:layout_constraintTop_toBottomOf="@id/txtNotification"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:searchIcon="@drawable/ic_search"
        android:background="@drawable/searchview_custom"
        app:queryHint="@string/search_notifications"
        app:iconifiedByDefault="false"
        android:focusable="false"
        app:theme="@style/SearchViewStyle"
        app:queryBackground="@android:color/transparent"
        android:layout_marginLeft="20dp"
        android:id="@+id/svNotification"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/svNotification"
        app:layout_constraintBottom_toBottomOf="@id/svNotification"
        app:layout_constraintLeft_toRightOf="@id/svNotification"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/lnFilterNotification"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_filter"
            android:id="@+id/imvFilterNotification"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textSize="15sp"
            android:fontFamily="@font/be_vietnam_regular"
            android:textColor="@color/blackUI"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/svNotification"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/all"
        android:textColor="@color/blackUI"
        android:background="@drawable/button_choose_filter_choosen"
        android:textAllCaps="false"
        android:fontFamily="@font/be_vietnam_regular"
        android:layout_marginLeft="20dp"
        android:id="@+id/btnAllNotification"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/svNotification"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@+id/btnAllNotification"
        android:text="@string/unread"
        android:textColor="@color/blackUI"
        android:background="@drawable/button_choose_filter"
        android:textAllCaps="false"
        android:id="@+id/btnUnread"
        android:fontFamily="@font/be_vietnam_regular"

        android:layout_marginLeft="8dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/svNotification"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@+id/btnUnread"
        android:text="@string/read"
        android:fontFamily="@font/be_vietnam_regular"
        android:textColor="@color/blackUI"
        android:background="@drawable/button_choose_filter"
        android:layout_marginLeft="8dp"
        android:id="@+id/btnRead"

        android:textAllCaps="false"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnAllNotification"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingBottom="8dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent"
                    android:textSize="19sp"
                    android:fontFamily="@font/be_vietnam_semibold"
                    android:textColor="@color/black"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_all_as_read"
                    android:gravity="end"
                    android:textSize="19sp"
                    android:fontFamily="@font/be_vietnam_semibold"
                    android:textColor="@color/primary_yellow"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"
                android:id="@+id/rcvDisplayAllNotifications"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/before"
                android:paddingBottom="8dp"
                android:textSize="19sp"
                android:fontFamily="@font/be_vietnam_semibold"
                android:textColor="@color/black"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:id="@+id/rcvDisTest"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>