<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_login"
    android:layout_margin="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select avatar"
        android:gravity="center"
        android:fontFamily="@font/fjalla_one_regular"
        android:textSize="24.5sp"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTakePhotos"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_dialog_long"
        android:fontFamily="@font/be_vietnam_medium"
        android:textAllCaps="false"
        android:text="@string/take_photos"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/custom_button_dialog_long"
        android:textAllCaps="false"
        android:text="@string/choose_from_gallery"
        android:layout_gravity="center"
        android:id="@+id/btnChooseFromGallery"
        android:textSize="16sp"
        android:fontFamily="@font/be_vietnam_medium"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_button_dialog_black"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:id="@+id/btnCancel"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/be_vietnam_medium"
        />








</LinearLayout>