<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:padding="20dp">



    <ImageView

        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/img_green_bike"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imvColorHis"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/imvColorHis"
        app:layout_constraintTop_toTopOf="@id/imvColorHis"
        android:layout_marginLeft="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/imvColorHis"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtEntryExit"
            android:text="@string/entry"
            android:fontFamily="@font/be_vietnam_semibold"
            android:textSize="15sp"
            android:textColor="@color/blackUI"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDateEntryExit"
            android:text="@string/_20_oct_10_07"
            android:textColor="@color/xamChu"

            android:fontFamily="@font/be_vietnam_medium"
            android:textSize="15sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="12dp"
        android:layout_height="12dp"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_support"
        android:id="@+id/imvSupport"
        app:layout_constraintTop_toTopOf="@id/imvColorHis"
        app:layout_constraintBottom_toBottomOf="@id/imvColorHis"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/xamChu"
        android:fontFamily="@font/be_vietnam_light"
        android:text="@string/contact_support"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/imvColorHis"
        android:layout_marginRight="10dp"
        android:paddingBottom="3dp"
        app:layout_constraintBottom_toBottomOf="@id/imvColorHis"
        app:layout_constraintRight_toLeftOf="@+id/imvSupport"/>







</androidx.constraintlayout.widget.ConstraintLayout>